--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,61 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Advent+Pro:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Advent+Pro:wght@400;500;600;700&family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&display=swap');
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+* {
+  margin: 0px;
+  padding: 0px;
+  outline: none;
+  box-sizing: border-box;
+  /* font-family: 'Rajdhani', sans-serif; */
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
-  margin: 0;
+  background-color: #71B6B5;
+  /* background-color: #88CAC9; */
+}
+.sign-up-button {
+  gap: 10px;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  box-shadow: none;
+  font-weight: 600;
+  padding: 17px 40px;
+  align-items: center;
+  border-radius: 20px;
+  transition: .3s linear;
+  justify-content: center;
+  color: white !important;
+  background-color: #71B6B5;
+  border: 1px solid #71B6B5 !important;
 }
-button:hover {
-  border-color: #646cff;
+.sign-up-button svg {
+  transition: .3s linear;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.sign-up-button:hover svg {
+  transform: translateX(5px);
 }
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.form {
+  width: 80%;
+  display: flex;
+  margin: 10px 0px;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+.form * {
+  text-align: center;
+}
+.input {
+  gap: 10px;
+  width: 100%;
+  display: flex;
+  border: 1px solid #71B6B5;
+}
+.input input {
+  text-align: left;
+  padding: 5px !important;
+}
+.ant-form-item-explain-error {
+  margin: 10px;
 }
